# newlib-nano-1.0

./: README.md
libgloss/: ChangeLog.nano  configure
libgloss/arm/: Makefile.in  crt0.S  elf-nano.specs
newlib/: ChangeLog.nano  README.nano
newlib/libc/include/sys/: reent.h
newlib/libc/reent/: reent.c
newlib/libc/stdio/: Makefile.am  Makefile.in  asnprintf.c  asprintf.c  dprintf.c  fflush.c  findfp.c  fprintf.c  fread.c  fscanf.c  fseek.c  makebuf.c  printf.c  puts.c  scanf.c  snprintf.c  sprintf.c  sscanf.c  vasnprintf.c  vasprintf.c  vdprintf.c  vfprintf.c  vfprintf_float.c  vfprintf_i.c  vfprintf_local.h  vfscanf.c  vfscanf_float.c  vfscanf_i.c  vfscanf_local.h  vfwprintf.c  vfwscanf.c  vprintf.c  vscanf.c  vsnprintf.c  vsprintf.c  vsscanf.c
newlib/libc/stdio64/: fseeko64.c
newlib/libc/stdlib/: Makefile.am  Makefile.in  __atexit.c  __atexit2.c  __call_atexit.c  atexit.c  atexit.h  cxa_atexit.c  eprintf.c  exit.c  mallocr.c  mstats.c  on_exit.c
newlib/libc/string/: strsignal.c
